project.html and project.css updated

--- a/projetcs.css
+++ b/projetcs.css
@@ -1,4 +1,69 @@
 body {
+  margin: 0;
+  padding: 0;
   background-color: rgb(12, 17, 29);
-  }
+}
 
+img {
+  float: right;
+  margin-top: 40px;
+  width: 80px;
+  height: 80px;
+}
+
+.insta {
+  margin-right: 0px;
+  margin-top: 40px;
+  width: 80px;
+  height: 80px;
+}
+
+.youtube {
+  margin-right: 0px;
+  margin-top: 20px;
+  width: 120px;
+  height: 120px;
+}
+
+.git {
+  margin-right: -5px;
+  margin-top: 30px;
+  width: 100px;
+  height: 100px;
+}
+
+header span {
+  position: absolute;
+  top: 2.5%; 
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  text-align: center; 
+  color: rgb(235, 181, 154);
+  font-family: 'Courgette', cursive;
+  font-size: 25px;
+}
+
+
+ul {
+  list-style-type: none;
+  top: 35px;
+  padding: 3.4px;
+  width: 103px; 
+  background-color: rgb(12, 17, 29);
+  position: fixed; 
+  height: 6%; 
+  overflow: auto; 
+}
+
+ul li a {
+  list-style-type: none;
+  display: block;
+  color: rgb(215, 215, 215);
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  background-color: rgb(235, 181, 154);
+  color: rgb(12, 17, 29);
+}
