--- a/projetcs.css
+++ b/projetcs.css
@@ -68,3 +68,68 @@ ul li a:hover {
   color: rgb(12, 17, 29);
 }
 
+.center {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(215, 215, 215);
+  font-size: 100px;
+  font-family: 'Neonderthaw', cursive;
+}
+
+.box-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.box {
+  flex: 1;
+  width: 300px;
+  height: 400px;
+  background-color: rgb(12, 17, 29);
+  border: 50px solid rgb(12, 17, 29);
+  border-radius: 0px;
+  overflow: hidden;
+  position: relative;
+  justify-content: space-between;
+}
+
+.box h1 {
+  font-size: 20px;
+  margin: 0;
+  padding: 10px;
+  background-color: rgb(235, 181, 154);
+  color: rgb(12, 17, 29);
+  text-align: center;
+}
+
+
+.box img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.box p {
+  padding: 10px;
+  font-size: 16px;
+  color: rgb(215, 215, 215);
+}
+
+.button {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+}
