--- a/projetcs.css
+++ b/projetcs.css
@@ -51,7 +51,7 @@ ul {
   width: 103px; 
   background-color: rgb(12, 17, 29);
   position: fixed; 
-  height: 6%; 
+  height: 10%; 
   overflow: auto; 
 }
 
@@ -94,12 +94,15 @@ ul li a:hover {
   width: 300px;
   height: 400px;
   background-color: rgb(12, 17, 29);
-  border: 50px solid rgb(12, 17, 29);
+  border-width: 50px;
+  border-style: solid;
+  border-color: rgb(12, 17, 29);
   border-radius: 0px;
   overflow: hidden;
   position: relative;
   justify-content: space-between;
 }
+
 
 .box h1 {
   font-size: 20px;
@@ -118,6 +121,7 @@ ul li a:hover {
 }
 
 .box p {
+  margin-top: 20px;
   padding: 10px;
   font-size: 16px;
   color: rgb(215, 215, 215);
