--- a/projetcs.css
+++ b/projetcs.css
@@ -1,3 +1,13 @@
+@media (max-width: 600px) {
+  /* apply styles here */
+  .box {
+    width: 100%;
+  }
+  .text {
+    font-size: 16px;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -94,7 +104,7 @@ ul li a:hover {
   width: 300px;
   height: 400px;
   background-color: rgb(12, 17, 29);
-  border-width: 50px;
+  border-width: 5px;
   border-style: solid;
   border-color: rgb(12, 17, 29);
   border-radius: 0px;
