--- a/projetcs.css
+++ b/projetcs.css
@@ -125,14 +125,14 @@ ul li a:hover {
 
 
 .box img {
+  margin-top: 10px;
   width: 100%;
   height: 200px;
   object-fit: cover;
 }
 
 .box p {
-  margin-top: 20px;
-  padding: 10px;
+  margin-top: -10px;
   font-size: 16px;
   color: rgb(215, 215, 215);
 }
@@ -141,8 +141,8 @@ ul li a:hover {
   position: absolute;
   bottom: 10px;
   left: 10px;
-  background-color: #333;
-  color: #fff;
+  background-color: rgb(215, 215, 215);
+  color: rgb(12, 17, 29);
   padding: 5px 10px;
   border-radius: 5px;
   text-decoration: none;
