--- a/projetcs.css
+++ b/projetcs.css
@@ -85,9 +85,22 @@ ul li a:hover {
   top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: rgb(215, 215, 215);
+  color: #fff;
+  animation: pulse 3s infinite;
   font-size: 100px;
   font-family: 'Neonderthaw', cursive;
+}
+
+@keyframes pulse {
+  0% {
+    text-shadow: 0 0 5px rgb(235, 181, 154), 0 0 10px rgb(235, 181, 154), 0 0 15px rgb(235, 181, 154), 0 0 20px rgb(235, 181, 154), 0 0 30px rgb(235, 181, 154), 0 0 40px rgb(235, 181, 154), 0 0 55px rgb(235, 181, 154), 0 0 75px rgb(235, 181, 154);
+  }
+  50% {
+    text-shadow: 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154), 0 0 0px rgb(235, 181, 154);
+  }
+  100% {
+    text-shadow: 0 0 5px rgb(235, 181, 154), 0 0 10px rgb(235, 181, 154), 0 0 15px rgb(235, 181, 154), 0 0 20px rgb(235, 181, 154), 0 0 30px rgb(235, 181, 154);
+  }
 }
 
 .box-container {
