--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ header {
 }
 nav span {
   text-align: center;
-  background-color: rgb(215, 215, 215);
   margin-top: 35px;
   display: flex;
   justify-content: space-around;
@@ -28,7 +27,7 @@ nav span {
 }
   
 ul {
-  background-color: rgb(215, 215, 215);
+  background-color: rgb(12, 17, 29);
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -46,7 +45,7 @@ ul li {
   
 ul li a {
   display: block;
-  color: rgb(12, 17, 29);
+  color: rgb(230, 187, 188);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -57,13 +56,22 @@ ul li a {
 }
   
 ul li a:hover {
-  background-color: rgb(235, 181, 154);
+  background-color: rgb(179, 171, 234);
 }
+
+img {
+  float: right;
+  margin-top: 20px;
+  height: 1000px;
+  width: 1900px;
+
+}
+
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: rgb(215, 215, 215); 
+  background-color: rgb(213, 128, 147); 
 }
 
 footer p {
