--- a/style.css
+++ b/style.css
@@ -76,8 +76,9 @@ footer {
 
 footer p {
   text-align: center;
-  margin-top: 25px;
+  margin-top: 35px;
   margin-right: 180px;
+  color: rgb(12, 17, 29);
 }
 
 footer img {
