--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ ul li a:hover {
   background-color: rgb(179, 171, 234);
 }
 
-img {
+.port4 {
   position: relative;
   float: right;
   margin-top: 20px;
@@ -71,7 +71,7 @@ img {
 }
 
 .heading {
-  position: fixed;
+  position: absolute;
   left: 100px;
   top: 300px;
   color: rgb(236, 106, 122);
@@ -80,7 +80,7 @@ img {
 }
 
 .heading2 {
-  position: fixed;
+  position: absolute;
   left: 100px;
   top: 360px;
   color: rgb(179, 171, 234);
@@ -88,7 +88,7 @@ img {
 }
 
 h2 {
-  position: fixed;
+  position: absolute;
   left: 100px;
   top: 455px;
   color: rgb(236, 106, 122);
@@ -98,7 +98,7 @@ h2 {
 }
 
 .linkedin {
-  position: fixed;
+  position: absolute;
   top: 655px;
   left: 40px;
   width: 200px;
@@ -106,7 +106,7 @@ h2 {
 }
 
 .instagram {
-  position: fixed;
+  position: absolute;
   top: 655px;
   left: 200px;
   width: 200px;
@@ -114,7 +114,7 @@ h2 {
 }
 
 .youtube {
-  position: fixed;
+  position: absolute;
   top: 605px;
   left: 325px;
   width: 300px;
@@ -122,7 +122,7 @@ h2 {
 }
 
 .git {
-  position: fixed;
+  position: absolute;
   top: 655px;
   left: 550px;
   width: 200px;
