--- a/style.css
+++ b/style.css
@@ -129,12 +129,23 @@ h2 {
   height: 200px;
 }
 
+.square {
+  position: absolute;
+  width: 100%;
+  height: 500px;
+  top: 1100px;
+  left: 50%;
+  transform: translate(-50%);
+  
+}
+
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 100px;
   background-color: rgb(12, 17, 29); 
+  
 }
 
 footer p {
