--- a/contact.css
+++ b/contact.css
@@ -104,5 +104,27 @@ a {
   }
   
   
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+  }
+  
+  footer p {
+    text-align: center;
+    margin-top: 35px;
+    color: rgb(179, 171, 234);
+  }
+  
+  footer img {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 100px; 
+    width: auto; 
+    margin: 0px; 
+  }
+  
   
   
