--- a/style.css
+++ b/style.css
@@ -7,11 +7,23 @@
     font-size: 18px;
   }
 }
+
 body {
   margin: 0;
   background-color: rgb(12, 17, 29);
+  
 }
 
+#container {
+  min-height: 100%;
+}
+
+#main {
+  overflow: auto;
+  height: 2000px;
+  padding: auto;
+  
+}
 header {
   display: none;
 }
@@ -130,31 +142,20 @@ h2 {
 }
 
 
-
 footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
-  height: 100px;
-  background-color: rgb(12, 17, 29); 
-  
+  height: 150px;
+  margin-top: -100px;;
+  clear: both;
+  background-color: rgb(12, 17, 29);
 }
+
 
 footer p {
   text-align: center;
-  margin-top: 35px;
+  padding-top: 50px;
   color: rgb(179, 171, 234);
 }
-
-footer img {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  height: 100px; 
-  width: auto; 
-  margin: 0px; 
-}
-
-
-
 
