--- a/style.css
+++ b/style.css
@@ -14,16 +14,6 @@ body {
   
 }
 
-#container {
-  min-height: 100%;
-}
-
-#main {
-  overflow: auto;
-  height: 2000px;
-  padding: auto;
-  
-}
 header {
   display: none;
 }
@@ -141,21 +131,26 @@ h2 {
   height: 200px;
 }
 
-
-footer {
-  position: relative;
-  bottom: 0;
+.square {
+  position: absolute;
   width: 100%;
-  height: 150px;
-  margin-top: -100px;;
-  clear: both;
-  background-color: rgb(12, 17, 29);
+  height: 700px;
+  top: 110%;
+  left: 50%;
+  margin: 0 auto;
+  transform: translate(-50%, -50%);
+}
+
+.video {
+  position: absolute;
+  width: 950px;
+  height: 490.5px;
+  top: 110%;
+  left: 50%;
+  margin: 0 auto;
+  transform: translate(-50%, -50%);
+
 }
 
 
-footer p {
-  text-align: center;
-  padding-top: 50px;
-  color: rgb(179, 171, 234);
-}
 
