--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ body {
   background-color: rgb(12, 17, 29);
   
 }
+#main {
+  position: relative;
+  overflow: auto;
+  height: 2000px;
+  padding: auto;
+  clear: both; 
+}
 
 header {
   display: none;
@@ -65,10 +72,9 @@ ul li a:hover {
 
 .port4 {
   position: relative;
-  float: right;
   margin-top: 20px;
-  height: 1000px;
-  width: 1900px;
+  height: 1100px;
+  width: 100%;
 
 }
 
@@ -135,7 +141,7 @@ h2 {
   position: absolute;
   width: 100%;
   height: 700px;
-  top: 110%;
+  top: 73.8%;
   left: 50%;
   margin: 0 auto;
   transform: translate(-50%, -50%);
@@ -145,12 +151,22 @@ h2 {
   position: absolute;
   width: 950px;
   height: 490.5px;
-  top: 110%;
+  top: 73.8%;
   left: 50%;
   margin: 0 auto;
   transform: translate(-50%, -50%);
 
 }
 
+
+footer {
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(12, 17, 29);
+  color: rgb(179, 171, 234);
+  text-align: center;
+  padding: 20px;
+  clear: both;
+}
 
 
